# recon

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  HISTORY.md  LICENSE  Makefile  OUT-OF-SCOPE.md  README.md  WISHLIST.md  dump.rdb
.cargo/: config.toml
assets/: aliases.toml
docs/: MANUAL.md  curl-parity-matrix.md
docs/reports/: 2026-06-16-out-of-scope-backlog-session.md
homebrew/: README.md
homebrew/Formula/: recon-impersonate.rb  recon.rb
script/: README.md  agent-browser-cmd.rhai  agent-browser-find.rhai  agent-browser-guard.rhai  agent-browser-inspect.rhai  agent-browser-interaction.rhai  agent-browser-navigation.rhai  agent-browser-options.rhai  agent-browser-pdf.rhai  agent-browser-screenshot.rhai  agent-browser-snapshot.rhai  agent-browser-title.rhai  agent-browser.rhai  ai-context.rhai  ai-multiturn.rhai  ai-simple.rhai  ai-system.rhai  ai.rhai  archive.rhai  batch-spider.rhai  browser-form-login.rhai  browser-iso8859.rhai  browser-login.rhai  browser-multi.rhai  browser-persist.rhai  browser-screenshot.rhai  browser.rhai  checkdigit.rhai  client-cert.rhai  clipboard.rhai  compare.rhai  compression.rhai  decode.rhai  dict.rhai  dns.rhai  doc-convert.rhai  dotenv.rhai  email.rhai  encode.rhai  encrypt.rhai  (+52 more)
src/: agent_browser.rs  aliases.rs  archive.rs  cert.rs  cli.rs  client.rs  client_cert.rs  clipboard.rs  compare.rs  compression.rs  config.rs  config_file.rs  config_resolver.rs  cookiejar.rs  decode.rs  dict_probe.rs  dns.rs  dns_resolver.rs  docs.rs  docs_pdf.rs  editor.rs  encode.rs  encrypt.rs  examples.rs  fail.rs  file_url.rs  flaglist.rs  ftp_probe.rs  gopher_probe.rs  hash.rs  help.rs  hsts.rs  iconv.rs  iface.rs  imap_probe.rs  impersonate.rs  init.rs  input_file.rs  ipfs.rs  jwt.rs  (+47 more)
src/checkdigit/: aba.rs  base58check.rs  bech32_mod.rs  brand.rs  country_id.rs  eip55.rs  format.rs  iban_countries.rs  luhn.rs  mod.rs  mod10_ean.rs  mod11.rs  mod31.rs  mod97.rs  mrz.rs  registry.rs  tax_id.rs  vat.rs  vin.rs
src/checkdigit/vat/: at.rs  be.rs  bg.rs  by.rs  ch.rs  cy.rs  cz.rs  de.rs  dk.rs  ee.rs  el.rs  es.rs  fi.rs  fr.rs  hr.rs  hu.rs  ie.rs  is.rs  it.rs  li.rs  lt.rs  lu.rs  lv.rs  md.rs  me.rs  mk.rs  mod.rs  mt.rs  nl.rs  no.rs  pl.rs  pt.rs  ro.rs  rs.rs  ru.rs  se.rs  si.rs  sk.rs  tr.rs  ua.rs  (+1 more)
src/email/: bimi.rs  dkim.rs  dmarc.rs  mod.rs  mta_sts.rs  spf.rs  tls_rpt.rs
src/impersonate/: h2_fingerprint.rs  mod.rs
src/repl/: meta.rs  mod.rs  multiline.rs  print.rs
src/script/: convert.rs  defaults.rs  engine.rs  error_hint.rs  mod.rs
src/script/bindings/: agent_browser.rs  archive.rs  browser.rs  checkdigit.rs  cli.rs  clipboard.rs  compare.rs  compression.rs  dict.rs  dns.rs  docs.rs  email.rs  encode.rs  encrypt.rs  file.rs  ftp.rs  gh.rs  git.rs  gopher.rs  hash.rs  helpers.rs  http.rs  imap.rs  ipfs.rs  jq.rs  jwt.rs  ldap.rs  memcached.rs  mod.rs  mqtt.rs  netstatus.rs  ntp.rs  output.rs  pdf.rs  ping.rs  pop3.rs  redis.rs  rtsp.rs  sample.rs  sftp.rs  (+14 more)
src/script/bindings/ai/: backend.rs  flatten.rs  mod.rs  request.rs  resolve.rs  runner.rs
src/script/bindings/ai/backends/: claude.rs  cmd.rs  codex.rs  copilot.rs  gemini.rs  mod.rs
src/serve/: files.rs  http.rs  https.rs  mod.rs  sni.rs
src/typst_pdf/: images.rs  mod.rs  preamble.rs  translate.rs  world.rs
tests/: aliases_it.rs  charset_it.rs  clipboard_it.rs  compare_it.rs  compressed_it.rs  create_dirs_it.rs  fail_with_body_it.rs  impersonate_it.rs  layered_config_it.rs  maxtime_it.rs  pdf_export_it.rs  pinnedpubkey_it.rs  remote_header_name_it.rs  remote_time_it.rs  render_it.rs  repl_it.rs  script_ai_it.rs  script_examples_it.rs  stdin_prettify_it.rs  typst_pdf_it.rs  writeout_it.rs
tests/fixtures/: render_sample.html
