[package]
name = "recon"
version = "0.24.4"
edition = "2021"

[[bin]]
name = "recon"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json", "multipart", "rustls-tls", "gzip", "deflate", "brotli", "zstd"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
indicatif = "0.17"
colored = "2"
native-tls = "0.2"
x509-parser = "0.16"
url = "2"
hickory-resolver = { version = "0.24", features = ["system-config"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "macros", "signal", "fs", "io-util"] }
socket2 = "0.6"
rusqlite = "0.32"
serde_json = "1"
serde_yaml = "0.9"
quick-xml = "0.37"
ssh2 = "0.9"
crossterm = "0.28"
rustls = { version = "0.23", features = ["ring"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
jsonwebtoken = "9"
pem = "3"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2"] }
http-body-util = "0.1"
bytes = "1"
tokio-rustls = "0.26"
rustls-pemfile = "2"
mime_guess = "2"
digest = "0.10"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1"
flate2 = "1"
zstd = "0.13"
brotli = "7"
bzip2 = "0.4"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
datamatrix = "0.3"
barcoders = { version = "1", default-features = false, features = ["ascii", "svg"] }
png = "0.17"
age = { version = "0.11", default-features = false, features = ["armor"] }
rpassword = "7"
secrecy = "0.8"
bs58 = "0.5"
bech32 = "0.11"
filetime = "0.2"
httpdate = "1"
ctrlc = "3"
rand = "0.8"
rumqttc = "0.24"
webpki-roots = "1"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
